# self-healing-automation-framework

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  LICENSE  Makefile  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: CONTRIBUTING.md  MockInterview.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TechnicalInterview.md  TechnicalInterview20QAGemini.md  TechnicalInterviewGemini.md
examples/: example_usage.py
self_healing_playwright/: __init__.py  openai_healer.py  safe_page.py
tests/: test_framework.py
